env in netlify fix 2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div id="loadingOverlay" class="loading-overlay">
             <div class="loading-spinner"></div>
-            <p>Our AI worm is searching for recommendations...</p>
+            <p>Our AI worm is digging for recommendations...</p>
         </div>
 
         <h1>The bookworm's companion</h1>
